tests/compilation_error/incompatible_array_element_comparison.ll
int[] a
string[] b

a[] = 1
b[] = "hi"

print a[0] == b[0]
